# sebo-tools

./: .env.sample  .gitignore  LICENSE.txt  README.md  batch.sh  livros_35.py  pyproject.toml  sebo_magic.py  sebo_wand.py  test_livros_35.py
moth/: count.py  covergen.py  imgnorm.py  mkdirs.py  rename.py  thumbgen.py
sebo_tools/: __init__.py  count.py  covergen.py  imgnorm.py  mkdirs.py  rename.py
tests/: conftest.py  test_chained.py  test_count.py  test_covergen.py  test_imgnorm.py  test_mkdirs.py  test_rename.py  test_sebo_magic.py  test_sebo_wand.py
tests/data/book-b/: 3.heic
