[tool.poetry]
name = "sebo-wand"
version = "0.1.0"
description = ""
authors = ["catsocks <3389801+catsocks@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "sebo_wand.py"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
Wand = "^0.6.11" # ImageMagick bindings
click = "^8.1.3" # CLI framework
rembg = "^2.0.30" # image background removal 
natsort = "^8.3.1" # natural sort order version of built-in sorted

[tool.poetry.group.dev.dependencies]
black = "^23.1.0" # code formatter
ruff = "^0.0.253" # linter
poethepoet = "^0.18.1" # task runner
pytest = "^7.2.2"
coverage = "^7.2.1" # code coverage
isort = "^5.12.0" # sort imports

[tool.poetry.scripts]
wand = "sebo_wand:cli"

[tool.isort]
profile = "black"

[tool.poe.tasks]
black = "black ."
isort = "isort ."
fmt = ["black", "isort"]
lint = "ruff check ."
coverage =  "coverage run -m pytest"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
