[tool.poetry]
name = "moth"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.2.0" # pillow over Wand because of no external dependencies
natsort = "^8.4.0" # natural sort order version of built-in sorted
requests = "^2.31.0" # for online background removal

[tool.poetry.group.dev.dependencies]
black = "^24.2.0" # formatter
ruff = "^0.3.0" # linter
isort = "^5.13.2" # import sorter
poethepoet = "^0.18.1" # task runner

[tool.poetry.scripts]
moth-count = "moth.count:main"
moth-covergen = "moth.covergen:main"
moth-mkdirs = "moth.mkdirs:main"
moth-imgnorm = "moth.imgnorm:main"
moth-rename = "moth.rename:main"
moth-thumbgen = "moth.thumbgen:main"

[tool.isort]
profile = "black"

[tool.poe.tasks]
black = "black ."
isort = "isort ."
fmt = ["black", "isort"]
lint = "ruff check ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
